@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-06T08:14:40Z",
-  "count_outdated" : 214,
-  "uniques_outdated" : 185,
+  "timestamp" : "2023-11-07T08:13:59Z",
+  "count_outdated" : 215,
+  "uniques_outdated" : 186,
   "count" : 222,
   "uniques" : 193,
   "clones" : [
-    {
-      "timestamp": "2023-10-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-26T00:00:00Z",
       "count": 1,
